--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <title>건병🐤</title>
   <style>
     h1,
-    h2 {
+    h2,
+    footer {
       font-family: 'Noto Sans KR', sans-serif;
     }
     ul {
